# termigotchi

./: .gitignore  CMakeLists.txt  README.md  rapor.typ  todo-features.txt
src/: ansi_escape_codes.h  globals.h  main.cpp  menus.cpp  menus.h
